Attach LGPL 2.1 to the program [DOCUMENTATION]

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
+Copyright (C) 2004-2010 Tampere University of Technology.
+
 Authors:
 
-Heikki Orsila <heikki.orsila@iki.fi>
+* Heikki Orsila <heikki.orsila@iki.fi> at Tampere University of Technology
