--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@ Copyright (C) 2004-2010 Tampere University of Technology.
 
 Authors:
 
-* Heikki Orsila <heikki.orsila@iki.fi> at Tampere University of Technology
+* Heikki Orsila <heikki.orsila@iki.fi>
